content/classes/2.5/EngineCapabilities.md
---
ID_PAGE: 25116
PG_TITLE: EngineCapabilities
PG_VERSION: 2.1
TAGS:
    -   Engine
---
## Description

class [EngineCapabilities](/classes/2.5/EngineCapabilities)

Regroup the different parameters linked to the using browser

## Members

### maxTexturesImageUnits : number

The maximum textures image

### maxTextureSize : number

The maximum texture size

### maxCubemapTextureSize : number

The maximum cube

### maxRenderTextureSize : number

The maximum render texture size

### maxVertexAttribs : number



### standardDerivatives : boolean



### s3tc : WEBGL_compressed_texture_s3tc



### pvrtc : any



### etc1 : any



### etc2 : any



### astc : any



### textureFloat : boolean



### textureAnisotropicFilterExtension : EXT_texture_filter_anisotropic



### maxAnisotropy : number

The maximum anisotropy for the using browser

### instancedArrays : ANGLE_instanced_arrays



### uintIndices : boolean



### highPrecisionShaderSupported : boolean



### fragmentDepthSupported : boolean



### textureFloatLinearFiltering : boolean



### textureFloatRender : boolean



### textureHalfFloat : boolean



### textureHalfFloatLinearFiltering : boolean



### textureHalfFloatRender : boolean



### textureLOD : boolean



### drawBuffersExtension : any



